--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    
 </head>
 <body class="terminal-body theme-green">
 
     <div class="stars"></div>
     <div class="scanlines"></div>
     
-    <canvas id="game-canvas"></canvas>
+    <canvas id="game-canvas" style="display:none;"></canvas>
 
     <div class="hud-layer">
         <div class="hud-alt">ALT <span id="hud-alt-val">35000</span></div>
@@ -35,14 +34,15 @@
         <div class="terminal-header">
             <span>UNIT: 01-ECO | FMC-ELITE</span>
             <div class="controls">
-    <div class="theme-swatches">
-        <div class="swatch green" onclick="setTheme('theme-green')" title="Emerald"></div>
-        <div class="swatch amber" onclick="setTheme('theme-amber')" title="Classic Amber"></div>
-        <div class="swatch blue" onclick="setTheme('theme-blue')" title="Night Vision"></div>
-        <div class="swatch red" onclick="setTheme('theme-red')" title="Emergency"></div>
-    </div>
-    <i class="fas fa-volume-up" id="sound-toggle"></i>
-</div>
+                <div class="theme-swatches">
+                    <div class="swatch green" onclick="setTheme('theme-green')" title="Emerald"></div>
+                    <div class="swatch amber" onclick="setTheme('theme-amber')" title="Classic Amber"></div>
+                    <div class="swatch blue" onclick="setTheme('theme-blue')" title="Night Vision"></div>
+                    <div class="swatch red" onclick="setTheme('theme-red')" title="Emergency"></div>
+                </div>
+                <i class="fas fa-volume-up" id="sound-toggle"></i>
+            </div>
+        </div>
 
         <div id="terminal-content-wrapper">
             <div class="interactive-deck">
