--- a/index.html
+++ b/index.html
@@ -3,29 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ECOVERSE | Interactive Flight System</title>
+    <title>ECOVERSE | Pilot Terminal</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body class="terminal-body theme-green">
 
-    <div class="stars"></div>
     <div class="scanlines"></div>
-    
-    <canvas id="game-canvas" style="display:none;"></canvas>
-
-    <div class="hud-layer">
-        <div class="hud-alt">ALT <span id="hud-alt-val">35000</span></div>
-        <div class="hud-hdg">HDG <span id="hud-hdg-val">270</span></div>
-    </div>
-
     <div id="master-warning-overlay">BANK ANGLE</div>
 
     <div id="landing-page">
         <div class="landing-content">
             <h1 class="glitch">ECOVERSE</h1>
-            <p>FLIGHT MANAGEMENT SYSTEM v5.0 [ELITE INTERACTIVE]</p>
+            <p>FLIGHT MANAGEMENT SYSTEM v5.0</p>
             <button id="enter-btn">INITIALIZE AVIONICS</button>
         </div>
     </div>
